# autoware_lanelet2_extension

./: .pre-commit-config.yaml  CPPLINT.cfg  README.md  build_depends.repos
.github/: CODEOWNERS  sync-files.yaml
.github/workflows/: build-and-test-differential.yaml  build-and-test.yaml  pre-commit-autoupdate.yaml
autoware_lanelet2_extension/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
autoware_lanelet2_extension/docs/: extra_lanelet_subtypes.md  extra_regulatory_elements.md  lanelet2_format_extension.md
autoware_lanelet2_extension/include/autoware_lanelet2_extension/: version.hpp
autoware_lanelet2_extension/include/autoware_lanelet2_extension/io/: autoware_multi_osm_parser.hpp  autoware_osm_parser.hpp
autoware_lanelet2_extension/include/autoware_lanelet2_extension/localization/: landmark.hpp
autoware_lanelet2_extension/include/autoware_lanelet2_extension/projection/: mgrs_projector.hpp  transverse_mercator_projector.hpp
autoware_lanelet2_extension/include/autoware_lanelet2_extension/regulatory_elements/: Forward.hpp  autoware_traffic_light.hpp  bus_stop_area.hpp  crosswalk.hpp  detection_area.hpp  no_parking_area.hpp  no_stopping_area.hpp  road_marking.hpp  roundabout.hpp  speed_bump.hpp  virtual_traffic_light.hpp
autoware_lanelet2_extension/include/autoware_lanelet2_extension/utility/: message_conversion.hpp  query.hpp  route_checker.hpp  utilities.hpp
autoware_lanelet2_extension/include/autoware_lanelet2_extension/visualization/: visualization.hpp
autoware_lanelet2_extension/lib/: autoware_multi_osm_parser.cpp  autoware_osm_parser.cpp  autoware_traffic_light.cpp  bus_stop_area.cpp  crosswalk.cpp  deprecated.cpp  deprecated.hpp  detection_area.cpp  landmark.cpp  message_conversion.cpp  mgrs_projector.cpp  no_parking_area.cpp  no_stopping_area.cpp  normalize_radian.hpp  query.cpp  road_marking.cpp  roundabout.cpp  route_checker.cpp  speed_bump.cpp  transverse_mercator_projector.cpp  utilities.cpp  virtual_traffic_light.cpp  visualization.cpp
autoware_lanelet2_extension/src/: check_right_of_way.cpp  sample_code.cpp  validation.cpp
autoware_lanelet2_extension/test/src/: test_message_conversion.cpp  test_normalize_radian.cpp  test_projector.cpp  test_query.cpp  test_regulatory_elements.cpp  test_route_checker.cpp  test_utilities.cpp
autoware_lanelet2_extension_python/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_lanelet2_extension_python/autoware_lanelet2_extension_python/projection/: __init__.py
autoware_lanelet2_extension_python/autoware_lanelet2_extension_python/regulatory_elements/: __init__.py
autoware_lanelet2_extension_python/autoware_lanelet2_extension_python/utility/: __init__.py  query.py  utilities.py
autoware_lanelet2_extension_python/example/: example.py
autoware_lanelet2_extension_python/src/: projection.cpp  regulatory_elements.cpp  utility.cpp
autoware_lanelet2_extension_python/test/: test_import_projection.py  test_import_regulatory_elements.py  test_import_utility.py  test_projection.py
autoware_lanelet2_extension_python/test_map/mgrs/: lanelet2_map.osm  map_projector_info.yaml
lanelet2_extension/: package.xml
lanelet2_extension/docs/: lanelet2_format_extension.md
lanelet2_extension_python/: CMakeLists.txt  package.xml
lanelet2_extension_python/src/: projection.cpp  utility.cpp
